--- a/final.css
+++ b/final.css
@@ -22,7 +22,7 @@ nav #logo {
   color: black;
   line-height: 4rem;
   left: 25px;
-  top: 40px;
+  top: 25px;
 }
 
 
@@ -36,6 +36,7 @@ nav {
   background: red;
   overflow: hidden;
   transition: width 1s ease;
+  padding-top: 20px;
 }
 
 nav:hover, nav.pinned {
@@ -96,8 +97,8 @@ body {
 } 
 
 .logo {
+  position: relative;
 	font-size: 5.5rem;
-	padding-top: 20px;
   z-index: -5;
   padding-left: 120px;
 }
@@ -106,7 +107,7 @@ button {
 	display: block;
 	position: absolute;
 	left: 440px;
-	top: 8px;
+	top: 20px;
 	font-size: 5.5rem;
 	color: black;
   outline: none;
@@ -121,7 +122,7 @@ button:hover {
 } 
 
 p {
-	width: 95%;
+	width: 90%;
 	margin: 0px;
 	padding-left: 120px;
 	padding-top: 15px;
@@ -148,55 +149,161 @@ a {
 	color: black;
 	cursor: pointer;
 }
-img.music {
-  position: absolute;
-  display: block;
-  width: 300px;
-  left: 130px;
-  z-index: -1
+
+section#musicSection {
+  position: relative;
+  width: 82%;
+  z-index: -1;
+  left: 120px;
+}
+
+div.music {
+  font-size: 6rem;
+  color: #00993b;
+}
+
+div.musicinfo {
+  position: relative;
+  font-size: 6rem;
 }
 
 img#thug {
-  position: absolute;
-  width: 450px;
+  position: relative;
+  width: 400px;
   float: left;
-  left: 400px;
+  left: 0px;
+  z-index: 1000000;
 }
 
 img#uzi {
   position: relative;
-  width: 500px;
+  width: 350px;
   float: left;
-  left: 250px;
+  left: 100px;
+  z-index: 2000000000;
 }
 
 section#graphicDesignSection {
   position: relative;
   width: 82%;
-  left: 120px;
   z-index: -1;
+  left: 120px;
+}
+
+img#figposter {
+  position: relative;
+  width: 525px;
+  float: left;
+  left: 0px;
+}
+
+img#ping {
+  position: relative;
+  width: 525px;
+  left: 0px;
+  float: left;
+  padding-top: 140px;
+}
+
+img#orangeposter {
+  position: relative;
+  width: 520px;
+  float: left;
+  left: 0px;
+  padding-top: 120px;
 }
 
 img#typeposter {
   position: relative;
-  width: 600px;
-  left: 50px;
-  z-index: -100;
+  width: 410px;
+  left: 0px;
   float: left;
 }
 
 img#redposter {
   position: relative;
-  width: 400px;
-  left: 80px;
-  z-index: -100;
+  width: 450px;
+  left: 0px;
+  z-index: 100;
   float: left;
 }
 
+img#floralisposter {
+  position: relative;
+  width: 475px;
+  left: 90px;
+  float: left;
+}
+
+
 div {
   position: relative;
-  font-size: 5.75rem;
-  line-height: 5.8rem;
+  font-size: 6rem;
+  line-height: 6rem;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+div.gd {
+  position: absolute;
+  font-size: 6rem;
+  color: #00993b;
+}
+
+div.gdinfo {
+  position: relative;
+  font-size: 6rem;
+}
+
+section#contactSection {
+  position: relative;
+  width: 82%;
+  z-index: -1;
+  left: 120px;
+}
+
+div.contact {
+  font-size: 6rem;
+  color: #00993b;
+}
+
+[class*='col-'] {
+  float: left;
+  margin-top: 20px;
+}
+
+.col-2-3 {
+  /* width: 66.66%; */
+  margin-right: 150px;
+}
+
+.col-1-3 {
+  /* width: 33.33%; */
+}
+
+.col-1-3 p:first-child {
+  margin-bottom: 20px;
+}
+
+.col-1-3 p:last-child {
+  margin-top: 20px;  
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover.contact {
+  text-decoration: underline;
+}
+
+
+.clearit {
+  clear: both;
 }
 
 
